Add a new field to cache search result

--- a/.config
+++ b/.config
@@ -1,6 +1,7 @@
 {
-    'website': 'https://example.xzy', 
-    'name': 'Johnny Cenana ', 
+    'website': 'https://example.xzy',
+    'name': 'Johnny Cenana',
     'password': 'thisisnotapassword',
-    'note': 'for extension'
+    'csv_name': 'bts.csv',
+    'note': 'meaningless'
 }
